# fippy

./: .gitignore  .requirements.txt  Example.ipynb  LICENSE  README.md  _explainer.py  _sampler.py  environment.yml  example.py  issues.md  pyproject.toml  requirements.txt  research.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
examples/: datagen.py  ex2_chain.py  test_cnf_sampling.py  test_explainer.py  test_gaussian_sampling.py  test_sequential.py
examples/chains/: 00_chain_2.ipynb  datagen.py  test_gaussian_sampling.py  test_samplers.py
examples/dedact_arxiv/: adult_simulations.py  psa_example.py
examples/experiments_cg/: continuous_dags.py  continuous_dags_i.py  continuous_dags_ii.py  discrete_dags.py  discrete_dags_i.py  discrete_dags_ii.py
examples/misunderstanding_conditional/: pitfall_example.py
examples/real_pseudoreal_dags/: experiments.py  rfi_experiments.py  sage_experiment.py
examples/sensetive/: experiment.py
examples/syntetic_dags/: datagen.py  experiments.py  gt_parents_experiments.py
experiments_cg/: continuous_dags.py
rfi/: requirements.txt  utils.py
rfi/backend/: __init__.py  estimator.py  goodness_of_fit.py  utils.py
rfi/decorellators/: decorellator.py  decorrelator.py  gaussian.py
rfi/decorrelators/: decorrelator.py  gaussian.py  naive.py  simple.py
rfi/examples/: __init__.py  cgexplainer_test.py  cgexplainer_test_cont.py  cgexplainer_test_discrete.py  chains.py  ii_paper.py
rfi/explainers/: cgexplainer.py  explainer.py  utils.py
rfi/explanation/: container.py  decomposition.py  explanation.py
rfi/plots/: _barplot.py  _barplot_multiple.py  _snsstyle.py  _utils.py
rfi/samplers/: __init__.py  _helpers.py  _utils.py  cnflow.py  ensemble.py  gaussian.py  mdn.py  mxsampler.py  sampler.py  sequential.py  simple.py
scripts/csl-experiments/: README.md  continuous_dags.py  datagen_env.R  datagen_pcalg.R  discrete_dags.py  fct_eval.py  graph_evaluation.py  mixed_dags.py  sage_to_csl_sage.py  utils.py
tests/: conftest.py  example.py  test_flows_estimation.py  test_flows_sampling.py  test_gaussian_estimation.py  test_gaussian_sampling.py  test_goodnesses_of_fit.py  test_new_explainer.py  test_non_gaussian_estimation.py  test_sems.py  test_suite1_ewald.py  test_suite2_theoretical.py  test_suite3_samplers_and_basic.py  test_suite4_inference.py  test_trivial.py
(+184 files in other folders)
