[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fippy"
version = "2023.0.0"
dependencies = [
    "enlighten",
    "numpy",
    "scikit-learn",
    "pandas",
    "matplotlib",
    "seaborn",
    "omegaconf",
    "torch",
    "mlflow",
    "category_encoders",
    "ray[tune]",
    "pyro-ppl",
    "nflows",
    "networkx",
]
