[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fippy"
version = "0.2.0"
description = "Feature Importance in Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "torch",
    "tqdm",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fippy"]
