[metadata]
name = fipy
version = 2023.0.0
author = gcskoenig
author_email = gunnar.koenig@pm.me
description = Feature importance in python, including support for conditional sampling.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/XXX
project_urls =
    Bug Tracker = https://github.com/XXX/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src